git ignore update

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /StackoverflowGuide/.vs/StackoverflowGuide/v16/.suo
 /StackoverflowGuide/.vs/StackoverflowGuide/v16/Server/sqlite3/storage.ide-shm
 /StackoverflowGuide/.vs/StackoverflowGuide/v16/Server/sqlite3/storage.ide-wal
+/StackoverflowGuide/.vs/StackoverflowGuide/v16/.suo
