Added Materia theme

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /StackoverflowGuide/.vs/StackoverflowGuide/v16/Server/sqlite3/storage.ide-shm
 /StackoverflowGuide/.vs/StackoverflowGuide/v16/Server/sqlite3/storage.ide-wal
 /StackoverflowGuide/.vs/StackoverflowGuide/v16/.suo
+/StackoverflowGuide/.vs/StackoverflowGuide/config/applicationhost.config
+/StackoverflowGuide/.vs/StackoverflowGuide/DesignTimeBuild/.dtbcache
+/StackoverflowGuide/.vs/StackoverflowGuide/v16/Server/sqlite3/storage.ide
