--- a/StackoverflowGuide/StackoverflowGuide/appsettings.Development.json
+++ b/StackoverflowGuide/StackoverflowGuide/appsettings.Development.json
@@ -5,5 +5,11 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "JwtKey": "KEY1312312312RANDO@STACKOWERFLOW",
+  "JwtIssuer": "StackowerflowGuide",
+  "JwtExpireDays": 30,
+  "ConnectionStrings": {
+    "MongoDbDatabase": "mongodb://localhost/StackowerflowGuide"
   }
 }
