--- a/StackoverflowGuide/StackoverflowGuide/appsettings.json
+++ b/StackoverflowGuide/StackoverflowGuide/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "JwtKey": "KEY1312312312RANDO@STACKOWERFLOW",
+  "JwtIssuer": "StackowerflowGuide",
+  "JwtExpireDays": 30,
+  "ConnectionStrings": {
+    "MongoDbDatabase": "mongodb://localhost/StackowerflowGuide"
+  },
   "AllowedHosts": "*"
 }
