Thread Controller start

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /StackoverflowGuide/.vs/StackoverflowGuide/config/applicationhost.config
 /StackoverflowGuide/.vs/StackoverflowGuide/DesignTimeBuild/.dtbcache
 /StackoverflowGuide/.vs/StackoverflowGuide/v16/Server/sqlite3/storage.ide
+/StackoverflowGuide/.vs/StackoverflowGuide/config/applicationhost.config
