--- a/StackoverflowGuide/StackoverflowGuide/ClientApp/package.json
+++ b/StackoverflowGuide/StackoverflowGuide/ClientApp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.2.3",
+    "axios": "^0.19.2",
     "bootstrap": "^4.3.1",
     "connected-react-router": "6.5.2",
     "history": "4.10.1",
