React-bootstrap added and react-hook-forms added, thunks created for api

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,8 @@
 /StackoverflowGuide/.vs/StackoverflowGuide/config/applicationhost.config
 /StackoverflowGuide/.vs/StackoverflowGuide/DesignTimeBuild/.dtbcache
 /StackoverflowGuide/.vs/StackoverflowGuide/v16/Server/sqlite3/storage.ide
+/StackoverflowGuide/.vs/StackoverflowGuide/DesignTimeBuild/.dtbcache
 /StackoverflowGuide/.vs/StackoverflowGuide/config/applicationhost.config
+/StackoverflowGuide/.vs/StackoverflowGuide/v16/Server/sqlite3/storage.ide
+/StackoverflowGuide/StackoverflowGuide/ClientApp/package-lock.json
+/StackoverflowGuide/StackoverflowGuide/ClientApp/package-lock.json
