--- a/StackoverflowGuide/StackoverflowGuide/ClientApp/package.json
+++ b/StackoverflowGuide/StackoverflowGuide/ClientApp/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.2.3",
+    "@types/axios": "^0.14.0",
+    "@types/yup": "^0.26.32",
     "axios": "^0.19.2",
     "bootstrap": "^4.3.1",
     "connected-react-router": "6.5.2",
@@ -12,21 +14,23 @@
     "merge": "1.2.1",
     "popper.js": "^1.16.0",
     "react": "16.11.0",
+    "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "16.11.0",
+    "react-hook-form": "^5.0.3",
     "react-redux": "7.1.1",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "^3.2.0",
-    "reactstrap": "8.1.1",
     "redux": "4.0.4",
     "redux-thunk": "2.3.0",
-    "svgo": "1.3.0"
+    "svgo": "1.3.0",
+    "yup": "^0.28.3"
   },
   "devDependencies": {
     "@types/history": "4.7.3",
     "@types/jest": "24.0.19",
     "@types/node": "12.11.6",
-    "@types/react": "16.9.9",
+    "@types/react": "^16.9.9",
     "@types/react-dom": "16.9.2",
     "@types/react-redux": "7.1.5",
     "@types/react-router": "^5.1.2",
@@ -39,7 +43,7 @@
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.16.0",
-    "typescript": "3.6.4"
+    "typescript": "^3.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
