--- a/StackoverflowGuide/StackoverflowGuide/appsettings.json
+++ b/StackoverflowGuide/StackoverflowGuide/appsettings.json
@@ -12,5 +12,9 @@
   "ConnectionStrings": {
     "MongoDbDatabase": "mongodb://localhost/StackowerflowGuide"
   },
+  "MongoSettings": {
+    "Connection": "mongodb://localhost",
+    "DatabaseName": "StackowerflowGuide"
+  },
   "AllowedHosts": "*"
 }
