Edit Thread server side done

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 /StackoverflowGuide/.vs/StackoverflowGuide/v16/Server/sqlite3/storage.ide
 /StackoverflowGuide/StackoverflowGuide/ClientApp/package-lock.json
 /StackoverflowGuide/StackoverflowGuide/ClientApp/package-lock.json
+/StackoverflowGuide/.vs/StackoverflowGuide/DesignTimeBuild/.dtbcache.v2
