--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 /StackoverflowGuide/StackoverflowGuide/ClientApp/package-lock.json
 /StackoverflowGuide/StackoverflowGuide/ClientApp/package-lock.json
 /StackoverflowGuide/.vs/StackoverflowGuide/DesignTimeBuild/.dtbcache.v2
+/StackoverflowGuide/StackoverflowGuide/ClientApp/package-lock.json
