--- a/StackoverflowGuide/StackoverflowGuide/ClientApp/package.json
+++ b/StackoverflowGuide/StackoverflowGuide/ClientApp/package.json
@@ -5,16 +5,19 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.2.3",
     "@types/axios": "^0.14.0",
+    "@types/react-d3-graph": "^2.3.1",
     "@types/yup": "^0.26.32",
     "axios": "^0.19.2",
     "bootstrap": "^4.3.1",
     "connected-react-router": "6.5.2",
+    "d3": "^5.5.0",
     "history": "4.10.1",
     "jquery": "^3.4.1",
     "merge": "1.2.1",
     "popper.js": "^1.16.0",
     "react": "16.11.0",
     "react-bootstrap": "^1.0.0-beta.17",
+    "react-d3-graph": "^2.4.1",
     "react-dom": "16.11.0",
     "react-hook-form": "^5.0.3",
     "react-icons": "^3.9.0",
