--- a/StackoverflowGuide/StackoverflowGuide/ClientApp/package.json
+++ b/StackoverflowGuide/StackoverflowGuide/ClientApp/package.json
@@ -3,51 +3,53 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.2.3",
+    "@reduxjs/toolkit": "^1.3.5",
     "@types/axios": "^0.14.0",
+    "@types/react-bootstrap-typeahead": "^3.4.5",
     "@types/react-d3-graph": "^2.3.1",
-    "@types/yup": "^0.26.32",
+    "@types/yup": "^0.26.37",
     "axios": "^0.19.2",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.4.1",
     "connected-react-router": "6.5.2",
     "d3": "^5.5.0",
     "history": "4.10.1",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.0",
     "merge": "1.2.1",
-    "popper.js": "^1.16.0",
+    "popper.js": "^1.16.1",
     "react": "16.11.0",
-    "react-bootstrap": "^1.0.0-beta.17",
+    "react-bootstrap": "^1.0.0",
+    "react-bootstrap-typeahead": "^4.2.2",
     "react-d3-graph": "^2.4.1",
     "react-dom": "16.11.0",
-    "react-hook-form": "^5.0.3",
+    "react-hook-form": "^5.5.1",
     "react-icons": "^3.9.0",
     "react-redux": "7.1.1",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
-    "react-scripts": "^3.2.0",
+    "react-scripts": "^3.4.1",
     "redux": "4.0.4",
     "redux-thunk": "2.3.0",
     "svgo": "1.3.0",
-    "yup": "^0.28.3"
+    "yup": "^0.28.4"
   },
   "devDependencies": {
     "@types/history": "4.7.3",
     "@types/jest": "24.0.19",
     "@types/node": "12.11.6",
-    "@types/react": "^16.9.9",
+    "@types/react": "^16.9.34",
     "@types/react-dom": "16.9.2",
     "@types/react-redux": "7.1.5",
-    "@types/react-router": "^5.1.2",
+    "@types/react-router": "^5.1.5",
     "@types/react-router-dom": "5.1.0",
     "@types/reactstrap": "8.0.6",
-    "@typescript-eslint/parser": "^2.5.0",
+    "@typescript-eslint/parser": "^2.29.0",
     "cross-env": "6.0.3",
-    "eslint": "^6.5.1",
+    "eslint": "^6.8.0",
     "eslint-plugin-flowtype": "^3.13.0",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.16.0",
-    "typescript": "^3.6.4"
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
