Posts can be acquired from BigQuery

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 /StackoverflowGuide/StackoverflowGuide/ClientApp/package-lock.json
 /StackoverflowGuide/.vs/StackoverflowGuide/DesignTimeBuild/.dtbcache.v2
 /StackoverflowGuide/StackoverflowGuide/ClientApp/package-lock.json
+/StackoverflowGuide/StackoverflowGuide/bq-secrets.json
