--- a/StackoverflowGuide/StackoverflowGuide/StackoverflowGuide.csproj
+++ b/StackoverflowGuide/StackoverflowGuide/StackoverflowGuide.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="AspNetCore.Identity.Mongo" Version="6.3.5" />
     <PackageReference Include="AutoMapper" Version="9.0.0" />
+    <PackageReference Include="Google.Cloud.BigQuery.V2" Version="1.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.1" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
