--- a/StackoverflowGuide/StackoverflowGuide/StackoverflowGuide.csproj
+++ b/StackoverflowGuide/StackoverflowGuide/StackoverflowGuide.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Google.Cloud.BigQuery.V2" Version="1.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.1" />
+    <PackageReference Include="morelinq" Version="3.3.2" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
   </ItemGroup>
 
