--- a/StackoverflowGuide/StackoverflowGuide/ClientApp/package.json
+++ b/StackoverflowGuide/StackoverflowGuide/ClientApp/package.json
@@ -7,6 +7,7 @@
     "@types/axios": "^0.14.0",
     "@types/react-bootstrap-typeahead": "^3.4.5",
     "@types/react-d3-graph": "^2.3.1",
+    "@types/react-scrollbar": "^0.5.1",
     "@types/yup": "^0.26.37",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
@@ -27,6 +28,7 @@
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "^3.4.1",
+    "react-scrollbar": "^0.5.6",
     "redux": "4.0.4",
     "redux-thunk": "2.3.0",
     "svgo": "1.3.0",
